--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ipykernel>=6.16.2",
+    "jupytext>=1.15.2",
     "matplotlib>=3.5.3",
     "ruff>=0.11.13",
 ]
