--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,6 @@ dev = [
     "ipykernel>=6.16.2",
     "jupytext>=1.15.2",
     "matplotlib>=3.5.3",
+    "pytest>=7.4.4",
     "ruff>=0.11.13",
 ]
